# book_deploy

./: .buildinfo  README.md  intro.html  pyproject.toml  searchindex.js
.github/workflows/: publish.yml
_sources/: intro.md
