[tool.pdm]

[project]
name = "book_deploy"
version = "0.1.0"
description = ""
authors = [
    {name = "yoblee", email = "yoblee@gmail.com"},
]
dependencies = [
    "jupyter-book>=0.15.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
